kubernetes/platform/zabbix/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
  labels:
    aetheriscloud.fr/tier: platform
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
